fix: svg content can overflow container

--- a/projects/components/src/titled-content/titled-content.component.scss
+++ b/projects/components/src/titled-content/titled-content.component.scss
@@ -35,7 +35,6 @@
     height: 100%;
     width: 100%;
     flex: 1 1 auto;
-    overflow: hidden;
   }
 
   .footer {
